just some small bug fixes
- falling oats were not showing on mobile
- if you started a new game you would get NaN error
- don't press G
- moved moo injection above oatnog and gold

--- a/clicker.css
+++ b/clicker.css
@@ -502,8 +502,8 @@
     position: absolute;
   }
   #falling-oats{
-    width: 600px !important;
-    -webkit-transform: translateZ(0);
+    width: 600px !important;  
+    -webkit-transform: translateZ(1);
     overflow-x: hidden !important;
   }
   .hid-merch-box{
